<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="356dp"
        android:layout_height="265dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ivGallery"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:text="search"
        tools:layout_editor_absoluteX="291dp"
        android:onClick="onClickSearch"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/snap"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="178dp"
        android:onClick="onSnapClick"
        android:text="snap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/snap"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="194dp"
        android:layout_marginEnd="82dp"
        android:onClick="onScrollClick"
        android:text="next"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/snap"
        app:layout_constraintTop_toBottomOf="@+id/tvTimestamp" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="15dp"
        android:onClick="onScrollClick"
        android:text="prev"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="622dp" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="100dp"
        android:onClick="onShareClick"
        />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="340dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="55dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="272dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/longTextView"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="55dp"
        android:ems="9"
        android:text="Longitude:"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/latiTextView"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="319dp"
        android:layout_marginEnd="55dp"
        android:ems="9"
        android:text="Latidue:"
        android:textStyle="bold"/>


   <Button
        android:id="@+id/etLocation"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="98dp"
        android:text="Location"
        android:onClick="onLocationClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

</RelativeLayout>